cmake_minimum_required(VERSION 3.26)
project(C__)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(C__
        "algorithm design1.cpp"
        "algorithm design2.cpp"
        "algorithm design3.cpp"
        "algorithm design4.cpp"
        BA.cpp
        "chained list.cpp"
        check.cpp
        "curriculum design1.cpp"
        "curriculum design2.cpp"
        DSA.cpp
        "heap allocation.cpp"
        HRRN.cpp
        lulu1.0.cpp
        luluwork2.cpp
        match1.cpp
        match2.cpp
        match21.cpp
        match22.cpp
        match3.cpp
        match31.cpp
        match41.cpp
        match51.cpp
        origincpp.cpp
        originwindows.cpp
        PCproblem.cpp
        picture.cpp
        poke.cpp
        pokes.cpp
        pokeUTF8.cpp
        "polynomial multiple.cpp"
        "polynomial multiplication.cpp"
        PRA.cpp
        practise.cpp
        RR.cpp
        RWproblem.cpp
        "Sequence list.cpp"
        sequenceteacher.cpp
        SJF.cpp
        stack.cpp
        test.cpp
        tree.cpp
        work2.cpp
        work3.cpp
        work4.1.cpp
        work4.2.cpp
        workA.cpp
        workB.cpp
        workC.cpp
        test.c)